--- a/about.html
+++ b/about.html
@@ -10,27 +10,29 @@
 </head>
 
 <body>
-    <div id="for-desktop">
-        <div class="for-desktop__main">
+    <div id="for--desktop">
+        <div class="for--desktop__main">
 
             <div class="menu-wrapper">
-                <menu class="menu">
-                    <a href="index.html">
-                        <li class="menu__item">Home</li>
-                    </a>
-                    <a href="contact.html">
-                        <li class="menu__item">Contact</li>
-                    </a>
-                    <a href="visualizers.html">
-                        <li class="menu__item">Visualizers</li>
-                    </a>
-                    <a href="productions.html">
-                        <li class="menu__item">Productions</li>
-                    </a>
-                    <a href="/about.html" class="active-page">
-                        <li class="menu__item">About</li>
-                    </a>
-                </menu>
+                <nav class="menu--desktop">
+                    <ul class="menu-list">
+                        <a href="index.html">
+                            <li class="menu__item">Home</li>
+                        </a>
+                        <a href="contact.html">
+                            <li class="menu__item">Contact</li>
+                        </a>
+                        <a href="visualizers.html">
+                            <li class="menu__item">Visualizers</li>
+                        </a>
+                        <a href="productions.html">
+                            <li class="menu__item">Productions</li>
+                        </a>
+                        <a href="/about.html" class="active-page">
+                            <li class="menu__item">About</li>
+                        </a>
+                    </ul>
+                </nav>
                 <div class="logo-wrapper">
                     <a id="logo-container">
                         <svg viewBox="0 0 1000 173.91">
@@ -129,9 +131,128 @@
             </p>
         </footer>
     </div>
+    <div id="for--mobile">
+        <div class="for--mobile__main">
+            <div class="menu-wrapper">
+                <nav class="menu--mobile">
+                    <ul class="menu-list--mobile">
+                        <a href="index.html">
+                            <li class="menu__item">Home</li>
+                        </a>
+                        <a href="contact.html">
+                            <li class="menu__item">Contact</li>
+                        </a>
+                        <a href="visualizers.html">
+                            <li class="menu__item">Visualizers</li>
+                        </a>
+                        <a href="productions.html">
+                            <li class="menu__item">Productions</li>
+                        </a>
+                        <a href="/about.html" class="active-page">
+                            <li class="menu__item">About</li>
+                        </a>
+                    </ul>
+                </nav>
+                <div class="logo-wrapper">
+                    <a id="logo-container">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 547.09 301.42">
+                            <path class="cls-1"
+                                d="M34.83,160.33c-1.08-1-1.63-2.2-1.63-3.61v-9.32c0-1.41-.51-2.61-1.54-3.61-1.03-1-2.26-1.5-3.71-1.5h-9.58c-1.45,0-2.68-.5-3.71-1.5-1.03-1-1.54-2.21-1.54-3.62v-48.7c0-1.29.51-2.44,1.54-3.44,1.02-1,2.26-1.5,3.71-1.5h9.58c1.45,0,2.68-.52,3.71-1.57,1.02-1.04,1.54-2.21,1.54-3.49v-9.42c0-1.28.54-2.44,1.63-3.49,1.08-1.04,2.29-1.57,3.62-1.57h77.07c1.32,0,2.53.53,3.62,1.58s1.63,2.23,1.63,3.52v87.61c0,1.41-.54,2.61-1.63,3.61-1.08,1-2.29,1.5-3.62,1.5H38.44c-1.33,0-2.53-.5-3.62-1.5ZM88.34,142.3c1.32,0,2.53-.5,3.62-1.5,1.08-1,1.63-2.21,1.63-3.62v-48.7c0-1.29-.54-2.44-1.63-3.44-1.08-1-2.29-1.5-3.62-1.5h-49.89c-1.33,0-2.53.5-3.62,1.5s-1.63,2.15-1.63,3.44v48.7c0,1.41.54,2.62,1.63,3.62,1.08,1,2.29,1.5,3.62,1.5h49.89Z" />
+                            <path class="cls-1"
+                                d="M133.05,160.33c-1.03-1-1.54-2.2-1.54-3.61V30.05c0-1.29.51-2.46,1.54-3.52,1.02-1.06,2.26-1.58,3.71-1.58h48.76c1.45,0,2.68.53,3.71,1.58,1.02,1.06,1.54,2.23,1.54,3.52v29.03c0,1.29.54,2.44,1.63,3.43,1.08,1,2.29,1.5,3.62,1.5h49.89c1.32,0,2.53.52,3.62,1.57,1.08,1.05,1.63,2.21,1.63,3.49v9.42c0,1.28.51,2.44,1.54,3.49,1.02,1.05,2.2,1.57,3.53,1.57l9.76.18c1.32,0,2.53.5,3.62,1.5,1.08,1,1.63,2.14,1.63,3.43v48.56c0,1.41-.54,2.61-1.63,3.61-1.08,1-2.29,1.5-3.62,1.5h-9.76c-1.33,0-2.5.5-3.53,1.5s-1.54,2.2-1.54,3.61v9.32c0,1.41-.54,2.61-1.63,3.61-1.08,1-2.29,1.5-3.62,1.5h-109.14c-1.45,0-2.68-.5-3.71-1.5ZM245.9,142.3c1.32,0,2.53-.5,3.62-1.5,1.08-1,1.63-2.21,1.63-3.62v-48.7c0-1.29-.54-2.44-1.63-3.44-1.08-1-2.29-1.5-3.62-1.5h-49.89c-1.33,0-2.53.5-3.62,1.5s-1.63,2.15-1.63,3.44v48.7c0,1.41.54,2.62,1.63,3.62,1.08,1,2.29,1.5,3.62,1.5h49.89Z" />
+                            <path class="cls-1"
+                                d="M321.04,160.33c-1.08-1-1.63-2.2-1.63-3.61v-9.32c0-1.41-.51-2.61-1.54-3.61-1.03-1-2.26-1.5-3.71-1.5h-25.69c-1.45,0-2.68-.5-3.71-1.5-1.03-1-1.54-2.21-1.54-3.62v-48.7c0-1.29.51-2.44,1.54-3.44,1.02-1,2.26-1.5,3.71-1.5l25.69.18c1.45,0,2.68-.53,3.71-1.58,1.02-1.06,1.54-2.23,1.54-3.52v-9.5c0-1.29.54-2.46,1.63-3.52s2.29-1.58,3.62-1.58h49.89c1.32,0,2.53.52,3.62,1.57,1.08,1.05,1.63,2.21,1.63,3.49v9.42c0,1.28.51,2.44,1.54,3.49,1.02,1.05,2.2,1.57,3.53,1.57h9.76c1.32,0,2.53.5,3.62,1.5s1.63,2.15,1.63,3.44v48.7c0,1.41-.54,2.62-1.63,3.62-1.08,1-2.29,1.5-3.62,1.5h-9.76c-1.33,0-2.5.5-3.53,1.5s-1.54,2.2-1.54,3.61v9.32c0,1.41-.54,2.61-1.63,3.61-1.08,1-2.29,1.5-3.62,1.5h-49.89c-1.33,0-2.53-.5-3.62-1.5ZM374.55,139.64c1.32,0,2.53-.5,3.62-1.5,1.08-1,1.63-2.21,1.63-3.62v-41.03c0-1.29-.54-2.44-1.63-3.44-1.08-1-2.29-1.5-3.62-1.5h-56.96c-1.33,0-2.53.5-3.62,1.5s-1.63,2.15-1.63,3.44v41.03c0,1.41.54,2.62,1.63,3.62,1.08,1,2.29,1.5,3.62,1.5h56.96Z" />
+                            <path class="cls-1"
+                                d="M229.13,267.64c-1.08-1-1.63-2.2-1.63-3.61v-9.32c0-1.41-.51-2.61-1.54-3.61-1.03-1-2.26-1.5-3.71-1.5h-21.85c-1.45,0-2.68-.5-3.71-1.5-1.03-1-1.54-2.2-1.54-3.61v-68.09c0-1.29.51-2.46,1.54-3.52,1.02-1.06,2.26-1.58,3.71-1.58h21.85c1.45,0,2.68.53,3.71,1.58,1.02,1.06,1.54,2.23,1.54,3.52v68.09c0,1.41.54,2.61,1.63,3.61,1.08,1,2.29,1.5,3.62,1.5h123.26c1.32,0,2.53-.5,3.62-1.5,1.08-1,1.63-2.2,1.63-3.61v-68.09c0-1.29.51-2.46,1.54-3.52,1.02-1.06,2.2-1.58,3.53-1.58h9.76c1.32,0,2.53.53,3.62,1.58s1.63,2.23,1.63,3.52v87.61c0,1.41-.54,2.61-1.63,3.61-1.08,1-2.29,1.5-3.62,1.5h-143.33c-1.33,0-2.53-.5-3.62-1.5Z" />
+                            <path class="cls-1"
+                                d="M423.98,267.64c-1.08-1-1.63-2.2-1.63-3.61v-9.32c0-1.41-.51-2.61-1.54-3.61-1.03-1-2.26-1.5-3.71-1.5h-9.58c-1.45,0-2.68-.5-3.71-1.5-1.03-1-1.54-2.21-1.54-3.62v-48.7c0-1.29-.51-2.44-1.54-3.44-1.03-1-2.26-1.5-3.71-1.5h-9.58c-1.45,0-2.68-.52-3.71-1.57-1.03-1.04-1.54-2.21-1.54-3.49v-9.42c0-1.28.51-2.44,1.54-3.49,1.02-1.04,2.26-1.57,3.71-1.57h9.58c1.45,0,2.68-.5,3.71-1.5,1.02-.99,1.54-2.14,1.54-3.43v-9.5c0-1.29.51-2.46,1.54-3.52,1.02-1.06,2.26-1.58,3.71-1.58h9.58c1.45,0,2.68.53,3.71,1.58,1.02,1.06,1.54,2.23,1.54,3.52v9.5c0,1.29.54,2.44,1.63,3.43,1.08,1,2.29,1.5,3.62,1.5h101.3c1.32,0,2.5.52,3.53,1.57,1.02,1.05,1.54,2.21,1.54,3.49v9.42c0,1.28-.51,2.44-1.54,3.49-1.03,1.05-2.2,1.57-3.53,1.57h-101.3c-1.33,0-2.53.5-3.62,1.5s-1.63,2.15-1.63,3.44v48.7c0,1.41.54,2.62,1.63,3.62,1.08,1,2.29,1.5,3.62,1.5h101.3c1.32,0,2.5.5,3.53,1.5,1.02,1,1.54,2.2,1.54,3.61v9.32c0,1.41-.51,2.61-1.54,3.61-1.03,1-2.2,1.5-3.53,1.5h-101.3c-1.33,0-2.53-.5-3.62-1.5Z" />
+                        </svg>
+                    </a>
+                    <div class="line-divider">
 
-    <script>
+                    </div>
+                </div>
+            </div>
 
+            <div class="content__about-wrapper">
+                <div class="content__about">
+                    <div class="content__about-desc">
+                        <p>
+                            WILFREDO HERRERA originates from the vibrant island of Puerto Rico from Cuban immigrants. As
+                            a person who enjoys learning new technologies, Fredo has delved into different mediums (like
+                            filmmaking, web development, and visual arts), exploring the landscape for new skills to
+                            master.
+                            He went to university in the U.S. to study his favorite subject- movies, and got a
+                            Bachelor's
+                            Degree in Film.
+                            <br>
+                            <br>
+                            Fredo works in productions in
+                            various roles, including as cinematographer for the short films <a class="link"
+                                href="https://youtu.be/VAabx5ttHa4" target=”_blank” rel="noopener noreferrer">DYNAMITE
+                                ABRAHAM: A DOCUMENTARY</a>, shot on Super 8mm and the upcoming <span
+                                style="text-decoration: underline;">SEXY BITCH</span>, shot digitally in N.Y.; as
+                            well
+                            as editor and director of the music video for the <a class="link"
+                                href="https://youtu.be/wNJihWmU-iE" target=”_blank” rel="noopener noreferrer">single
+                                THUNDER</a> by the Boston band Pyramid Thieves. He also has experience as a gaffer and
+                            sound
+                            person.
+
+                            <br>
+                            <br>
+
+                            Fredo started exploring analog video mixers, the world wide web, and visual programming
+                            languages thanks to an intro to video signals class offered by the collective PhaseSpace
+                            (now
+                            Wavefield) based out of Bushwick, N.Y. He aims to create visual pieces that stimulate the
+                            brain
+                            in conjuction with curated music.
+                            <br>
+                            <br>
+
+                            Fredo enjoys vinyl feel and discovering music. He creates mixes under the pseudonym <a
+                                class="link" href="https://www.mixcloud.com/fr_radio/"
+                                target="_blank"><em>fredonaut</em></a> -
+
+                            <br>
+                            <br>
+
+                            <iframe width="100%" height="60"
+                                src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fwarning-from-space-%E5%AE%87%E5%AE%99%E4%BA%BA%E6%9D%B1%E4%BA%AC%E3%81%AB%E7%8F%BE%E3%82%8F%E3%82%8B%2F"
+                                frameborder="0"></iframe>
+                            <iframe width="100%" height="60"
+                                src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fcat-women-of-the-moon%2F"
+                                frameborder="0"></iframe>
+
+                            <br>
+                            <br>
+
+                            Fredo currently resides in New York, focusing on producing short films, digital/analog
+                            video manipulation, generative art, and web development. He welcomes all artistic
+                            collaborations. &#9787;
+
+                            <br>
+                            <br>
+                            CV can be found <a href="assets/resume/fredo_resume-v051624.pdf" target="_blank"
+                                class="link" style="color: lightblue;">here</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="content__about-img">
+                    <img src="assets/images/self-portrait.jpeg" alt="">
+                </div>
+            </div>
+
+        </div>
+        <footer>
+            <p class="foot-text">
+                &copy; 2024 WILFREDO HERRERA <br> <br> &#9886; <strong>This site is always evolving</strong> &#9887;
+            </p>
+        </footer>
+    </div>
+
+    <script src="/script.js">
     </script>
 </body>
 
