--- a/contact.html
+++ b/contact.html
@@ -13,27 +13,29 @@
 </head>
 
 <body>
-    <div id="for-desktop">
-        <div class="for-desktop__main">
+    <div id="for--desktop">
+        <div class="for--desktop__main">
 
             <div class="menu-wrapper">
-                <menu class="menu">
-                    <a href="index.html">
-                        <li class="menu__item">Home</li>
-                    </a>
-                    <a href="contact.html" class="active-page">
-                        <li class="menu__item">Contact</li>
-                    </a>
-                    <a href="visualizers.html">
-                        <li class="menu__item">Visualizers</li>
-                    </a>
-                    <a href="productions.html">
-                        <li class="menu__item">Productions</li>
-                    </a>
-                    <a href="/about.html">
-                        <li class="menu__item">About</li>
-                    </a>
-                </menu>
+                <nav class="menu--desktop">
+                    <ul class="menu-list">
+                        <a href="index.html">
+                            <li class="menu__item">Home</li>
+                        </a>
+                        <a href="contact.html">
+                            <li class="menu__item" class="active-page">Contact</li>
+                        </a>
+                        <a href="visualizers.html">
+                            <li class="menu__item">Visualizers</li>
+                        </a>
+                        <a href="productions.html">
+                            <li class="menu__item">Productions</li>
+                        </a>
+                        <a href="/about.html">
+                            <li class="menu__item">About</li>
+                        </a>
+                    </ul>
+                </nav>
                 <div class="logo-wrapper">
                     <a id="logo-container">
                         <svg viewBox="0 0 1000 173.91">
@@ -69,7 +71,69 @@
                 <ul class="socials__menu">
                     <li><a href="mailto:fredo25w@gmail.com">email</a></li>
                     <li><a href="https://www.instagram.com/bebofrik/" target="_blank">instagram</a></li>
-                    <li><a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank">youtube</a></li>
+                    <li><a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank">youtube</a>
+                    </li>
+                    <li><a href="https://letterboxd.com/spookyfr/" target="_blank">letterboxd</a></li>
+                </ul>
+            </div>
+
+
+        </div>
+
+    </div>
+    <div id="for--mobile">
+        <div class="for--mobile__main">
+
+            <div class="menu-wrapper">
+                <nav class="menu--mobile">
+                    <ul class="menu-list--mobile">
+                        <a href="index.html">
+                            <li class="menu__item">Home</li>
+                        </a>
+                        <a href="contact.html" class="active-page">
+                            <li class="menu__item">Contact</li>
+                        </a>
+                        <a href="visualizers.html">
+                            <li class="menu__item">Visualizers</li>
+                        </a>
+                        <a href="productions.html">
+                            <li class="menu__item">Productions</li>
+                        </a>
+                        <a href="/about.html">
+                            <li class="menu__item">About</li>
+                        </a>
+                    </ul>
+                </nav>
+                <div class="logo-wrapper">
+                    <a id="logo-container">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 547.09 301.42">
+                            <path class="cls-1" d="M34.02,140.68c-1.13-.99-1.69-2.2-1.69-3.6v-9.31c0-1.41-.54-2.6-1.6-3.6-1.07-.99-2.35-1.49-3.86-1.49h-9.97c-1.5,0-2.79-.5-3.86-1.5-1.07-1-1.6-2.2-1.6-3.62v-48.64c0-1.29.53-2.44,1.6-3.43,1.06-1,2.35-1.5,3.86-1.5h9.97c1.5,0,2.79-.52,3.86-1.57,1.06-1.04,1.6-2.2,1.6-3.48v-9.4c0-1.27.56-2.44,1.69-3.48,1.13-1.04,2.38-1.57,3.76-1.57h121.55c1.38,0,2.63.52,3.76,1.57,1.13,1.05,1.69,2.21,1.69,3.48v9.4c0,1.28-.56,2.44-1.69,3.48-1.13,1.05-2.38,1.57-3.76,1.57H37.78c-1.38,0-2.63.5-3.76,1.5-1.13,1-1.69,2.14-1.69,3.43v48.64c0,1.41.56,2.62,1.69,3.62,1.13,1,2.38,1.5,3.76,1.5h121.55c1.38,0,2.63.5,3.76,1.49,1.13,1,1.69,2.2,1.69,3.6v9.31c0,1.41-.56,2.61-1.69,3.6-1.13,1-2.38,1.49-3.76,1.49H37.78c-1.38,0-2.63-.5-3.76-1.49Z"/>
+                            <path class="cls-1" d="M201.46,140.68c-1.13-.99-1.69-2.2-1.69-3.6v-9.31c0-1.41-.54-2.6-1.6-3.6-1.07-.99-2.35-1.49-3.86-1.49h-9.97c-1.5,0-2.79-.5-3.86-1.5-1.07-1-1.6-2.2-1.6-3.62v-48.64c0-1.29.53-2.44,1.6-3.43,1.06-1,2.35-1.5,3.86-1.5l9.97.18c1.5,0,2.79-.53,3.86-1.58,1.06-1.05,1.6-2.22,1.6-3.51v-9.49c0-1.29.56-2.46,1.69-3.51,1.13-1.05,2.38-1.58,3.76-1.58h51.92c1.38,0,2.63.52,3.76,1.57,1.13,1.05,1.69,2.21,1.69,3.48v9.4c0,1.28.53,2.44,1.6,3.48,1.06,1.05,2.29,1.57,3.67,1.57h10.16c1.38,0,2.63.5,3.76,1.5,1.13,1,1.69,2.14,1.69,3.43v48.64c0,1.41-.56,2.62-1.69,3.62-1.13,1-2.38,1.5-3.76,1.5h-10.16c-1.38,0-2.6.5-3.67,1.49-1.07,1-1.6,2.2-1.6,3.6v9.31c0,1.41-.56,2.61-1.69,3.6-1.13,1-2.38,1.49-3.76,1.49h-51.92c-1.38,0-2.63-.5-3.76-1.49ZM257.15,122.67c1.38,0,2.63-.5,3.76-1.5,1.13-1,1.69-2.2,1.69-3.62v-48.64c0-1.29-.56-2.44-1.69-3.43-1.13-1-2.38-1.5-3.76-1.5h-51.92c-1.38,0-2.63.5-3.76,1.5-1.13,1-1.69,2.14-1.69,3.43v48.64c0,1.41.56,2.62,1.69,3.62,1.13,1,2.38,1.5,3.76,1.5h51.92Z"/>
+                            <path class="cls-1" d="M293.5,140.68c-1.07-.99-1.6-2.2-1.6-3.6V49.59c0-1.29.53-2.46,1.6-3.51,1.06-1.05,2.35-1.58,3.86-1.58h49.52c1.38,0,2.63.52,3.76,1.57,1.13,1.05,1.69,2.21,1.69,3.48v9.4c0,1.28.53,2.44,1.6,3.48,1.06,1.05,2.29,1.57,3.67,1.57h10.16c1.38,0,2.63.5,3.76,1.5,1.13,1,1.69,2.14,1.69,3.43v68.15c0,1.41-.56,2.61-1.69,3.61-1.13,1-2.38,1.5-3.76,1.5h-10.16c-1.38,0-2.6-.5-3.67-1.5-1.07-1-1.6-2.2-1.6-3.61v-68.15c0-1.29-.56-2.44-1.69-3.43-1.13-1-2.38-1.5-3.76-1.5h-28.64c-1.38,0-2.63.5-3.76,1.5-1.13,1-1.69,2.14-1.69,3.43v68.15c0,1.41-.54,2.61-1.6,3.61-1.07,1-2.35,1.5-3.86,1.5h-9.97c-1.5,0-2.79-.5-3.86-1.49Z"/>
+                            <path class="cls-1" d="M409.89,140.68c-1.13-.99-1.69-2.2-1.69-3.6v-9.31c0-1.41-.54-2.6-1.6-3.6-1.07-.99-2.35-1.49-3.86-1.49h-9.97c-1.5,0-2.79-.5-3.86-1.5-1.07-1-1.6-2.2-1.6-3.62v-48.64c0-1.29-.53-2.44-1.6-3.43-1.07-1-2.35-1.5-3.86-1.5h-9.97c-1.5,0-2.79-.52-3.86-1.57-1.07-1.04-1.6-2.2-1.6-3.48v-9.4c0-1.27.53-2.44,1.6-3.48,1.06-1.04,2.35-1.57,3.86-1.57h9.97c1.5,0,2.79-.5,3.86-1.49,1.06-.99,1.6-2.14,1.6-3.43v-9.49c0-1.29.53-2.46,1.6-3.51,1.06-1.05,2.35-1.58,3.86-1.58h9.97c1.5,0,2.79.53,3.86,1.58,1.06,1.05,1.6,2.23,1.6,3.51v9.49c0,1.29.56,2.43,1.69,3.43,1.13,1,2.38,1.49,3.76,1.49h31.04c1.38,0,2.6.52,3.67,1.57,1.06,1.05,1.6,2.21,1.6,3.48v9.4c0,1.28-.53,2.44-1.6,3.48-1.07,1.05-2.29,1.57-3.67,1.57h-31.04c-1.38,0-2.63.5-3.76,1.5-1.13,1-1.69,2.14-1.69,3.43v48.64c0,1.41.56,2.62,1.69,3.62,1.13,1,2.38,1.5,3.76,1.5h31.04c1.38,0,2.6.5,3.67,1.49,1.06,1,1.6,2.2,1.6,3.6v9.31c0,1.41-.53,2.61-1.6,3.6-1.07,1-2.29,1.49-3.67,1.49h-31.04c-1.38,0-2.63-.5-3.76-1.49Z"/>
+                            <path class="cls-1" d="M179.17,267.64c-1.13-.99-1.69-2.2-1.69-3.6v-9.31c0-1.41-.54-2.6-1.6-3.6-1.07-.99-2.35-1.49-3.86-1.49h-9.97c-1.5,0-2.79-.5-3.86-1.5-1.07-1-1.6-2.2-1.6-3.62v-48.64c0-1.29.53-2.44,1.6-3.43,1.06-1,2.35-1.5,3.86-1.5h9.97c1.5,0,2.79-.52,3.86-1.57,1.06-1.04,1.6-2.2,1.6-3.48v-9.4c0-1.27.56-2.44,1.69-3.48,1.13-1.04,2.38-1.57,3.76-1.57h55.75c1.38,0,2.63.53,3.76,1.58s1.69,2.23,1.69,3.51v87.49c0,1.41-.56,2.61-1.69,3.6-1.13,1-2.38,1.49-3.76,1.49h-55.75c-1.38,0-2.63-.5-3.76-1.49ZM217.8,249.64c1.38,0,2.63-.5,3.76-1.5,1.13-1,1.69-2.2,1.69-3.62v-48.64c0-1.29-.56-2.44-1.69-3.43-1.13-1-2.38-1.5-3.76-1.5h-34.87c-1.38,0-2.63.5-3.76,1.5-1.13,1-1.69,2.14-1.69,3.43v48.64c0,1.41.56,2.62,1.69,3.62,1.13,1,2.38,1.5,3.76,1.5h34.87Z"/>
+                            <path class="cls-1" d="M275.76,267.64c-1.13-.99-1.69-2.2-1.69-3.6v-9.31c0-1.41-.54-2.6-1.6-3.6-1.07-.99-2.35-1.49-3.86-1.49h-9.97c-1.5,0-2.79-.5-3.86-1.5-1.07-1-1.6-2.2-1.6-3.62v-48.64c0-1.29.53-2.44,1.6-3.43,1.06-1,2.35-1.5,3.86-1.5h9.97c1.5,0,2.79-.52,3.86-1.57,1.06-1.04,1.6-2.2,1.6-3.48v-9.4c0-1.27.56-2.44,1.69-3.48,1.13-1.04,2.38-1.57,3.76-1.57h70.97c1.38,0,2.63.52,3.76,1.57,1.13,1.05,1.69,2.21,1.69,3.48v9.4c0,1.28-.56,2.44-1.69,3.48-1.13,1.05-2.38,1.57-3.76,1.57h-70.97c-1.38,0-2.63.5-3.76,1.5-1.13,1-1.69,2.14-1.69,3.43v48.64c0,1.41.56,2.62,1.69,3.62,1.13,1,2.38,1.5,3.76,1.5h70.97c1.38,0,2.63.5,3.76,1.49,1.13,1,1.69,2.2,1.69,3.6v9.31c0,1.41-.56,2.61-1.69,3.6-1.13,1-2.38,1.49-3.76,1.49h-70.97c-1.38,0-2.63-.5-3.76-1.49Z"/>
+                            <path class="cls-1" d="M388.31,267.64c-1.13-.99-1.69-2.2-1.69-3.6v-9.31c0-1.41-.54-2.6-1.6-3.6-1.07-.99-2.35-1.49-3.86-1.49h-9.97c-1.5,0-2.79-.5-3.86-1.5-1.07-1-1.6-2.2-1.6-3.62v-48.64c0-1.29-.53-2.44-1.6-3.43-1.07-1-2.35-1.5-3.86-1.5h-9.97c-1.5,0-2.79-.52-3.86-1.57-1.07-1.04-1.6-2.2-1.6-3.48v-9.4c0-1.27.53-2.44,1.6-3.48,1.06-1.04,2.35-1.57,3.86-1.57h9.97c1.5,0,2.79-.5,3.86-1.49,1.06-.99,1.6-2.14,1.6-3.43v-9.49c0-1.29.53-2.46,1.6-3.51,1.06-1.05,2.35-1.58,3.86-1.58h9.97c1.5,0,2.79.53,3.86,1.58,1.06,1.05,1.6,2.23,1.6,3.51v9.49c0,1.29.56,2.43,1.69,3.43,1.13,1,2.38,1.49,3.76,1.49h117.61c1.38,0,2.6.52,3.67,1.57,1.06,1.05,1.6,2.21,1.6,3.48v9.4c0,1.28-.53,2.44-1.6,3.48-1.07,1.05-2.29,1.57-3.67,1.57h-117.61c-1.38,0-2.63.5-3.76,1.5-1.13,1-1.69,2.14-1.69,3.43v48.64c0,1.41.56,2.62,1.69,3.62,1.13,1,2.38,1.5,3.76,1.5h117.61c1.38,0,2.6.5,3.67,1.49,1.06,1,1.6,2.2,1.6,3.6v9.31c0,1.41-.53,2.61-1.6,3.6-1.07,1-2.29,1.49-3.67,1.49h-117.61c-1.38,0-2.63-.5-3.76-1.49Z"/>
+                          </svg>
+                    </a>
+                    <div class="line-divider">
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="socials">
+                <p>
+                    let's collaborate on art/film/vibess
+                </p>
+                <p>
+                    hit up my links below &#9787;
+                </p>
+                <ul class="socials__menu">
+                    <li><a href="mailto:fredo25w@gmail.com">email</a></li>
+                    <li><a href="https://www.instagram.com/bebofrik/" target="_blank">instagram</a></li>
+                    <li><a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank">youtube</a>
+                    </li>
                     <li><a href="https://letterboxd.com/spookyfr/" target="_blank">letterboxd</a></li>
                 </ul>
             </div>
@@ -79,8 +143,7 @@
 
     </div>
 
-    <script>
-
+    <script src="/script.js">
     </script>
 </body>
 
