--- a/index.html
+++ b/index.html
@@ -13,30 +13,32 @@
 </head>
 
 <body style="overflow: hidden;">
-    <div id="for-desktop">
-        <div class="for-desktop__main">
+    <div id="for--desktop">
+        <div class="for--desktop__main">
             <div class="bg-container">
                 <video src="assets/videos/bg-video-compressed.mp4" autoplay muted playinline loop
                     disablepictureinpicture></video>
             </div>
             <div class="menu-wrapper">
-                <menu class="menu">
-                    <a href="index.html" class="active-page">
-                        <li class="menu__item">Home</li>
-                    </a>
-                    <a href="contact.html">
-                        <li class="menu__item">Contact</li>
-                    </a>
-                    <a href="visualizers.html">
-                        <li class="menu__item">Visualizers</li>
-                    </a>
-                    <a href="productions.html">
-                        <li class="menu__item">Productions</li>
-                    </a>
-                    <a href="/about.html">
-                        <li class="menu__item">About</li>
-                    </a>
-                </menu>
+                <nav class="menu--desktop">
+                    <ul class="menu-list">
+                        <a href="index.html" class="active-page">
+                            <li class="menu__item">Home</li>
+                        </a>
+                        <a href="contact.html">
+                            <li class="menu__item">Contact</li>
+                        </a>
+                        <a href="visualizers.html">
+                            <li class="menu__item">Visualizers</li>
+                        </a>
+                        <a href="productions.html">
+                            <li class="menu__item">Productions</li>
+                        </a>
+                        <a href="/about.html">
+                            <li class="menu__item">About</li>
+                        </a>
+                    </ul>
+                </nav>
                 <div class="logo-wrapper">
                     <a id="logo-container">
                         <svg viewBox="0 0 1000 173.91">
@@ -62,27 +64,99 @@
                     </a>
                     <div class="marquee" lang="en">
                         <div class="marquee__text">
-                            <span class="marquee__text-string">&nbsp; &#10031; &nbsp; Visual Artist &nbsp; &#10031;
-                                &nbsp; Video Editor &nbsp; &#10031; &nbsp; Web Dev Enthusiast &nbsp; &#10031; &nbsp;
-                                Visual Artist &nbsp; &#10031; &nbsp; Video Editor &nbsp; &#10031; &nbsp; Web Dev
-                                Enthusiast
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
                             </span>
-                            <span class="marquee__text-string">&nbsp; &#10031; &nbsp; Visual Artist &nbsp; &#10031;
-                                &nbsp; Video Editor &nbsp; &#10031; &nbsp; Web Dev Enthusiast &nbsp; &#10031; &nbsp;
-                                Visual Artist &nbsp; &#10031; &nbsp; Video Editor &nbsp; &#10031; &nbsp; Web Dev
-                                Enthusiast
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
                             </span>
                         </div>
                         <div class="marquee__text" aria-hidden="true">
-                            <span class="marquee__text-string">&nbsp; &#10031; &nbsp; Visual Artist &nbsp; &#10031;
-                                &nbsp; Video Editor &nbsp; &#10031; &nbsp; Web Dev Enthusiast &nbsp; &#10031; &nbsp;
-                                Visual Artist &nbsp; &#10031; &nbsp; Video Editor &nbsp; &#10031; &nbsp; Web Dev
-                                Enthusiast
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
                             </span>
-                            <span class="marquee__text-string">&nbsp; &#10031; &nbsp; Visual Artist &nbsp; &#10031;
-                                &nbsp; Video Editor &nbsp; &#10031; &nbsp; Web Dev Enthusiast &nbsp; &#10031; &nbsp;
-                                Visual Artist &nbsp; &#10031; &nbsp; Video Editor &nbsp; &#10031; &nbsp; Web Dev
-                                Enthusiast
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div id="for--mobile">
+        <div class="for--mobile__main">
+            <div class="bg-container">
+                <video src="assets/videos/bg-video-compressed.mp4" autoplay muted playinline loop
+                    disablepictureinpicture></video>
+            </div>
+            <div class="menu-wrapper">
+                <nav class="menu--mobile">
+                    <ul class="menu-list--mobile">
+                        <a href="index.html" class="active-page">
+                            <li class="menu__item">Home</li>
+                        </a>
+                        <a href="contact.html">
+                            <li class="menu__item">Contact</li>
+                        </a>
+                        <a href="visualizers.html">
+                            <li class="menu__item">Visualizers</li>
+                        </a>
+                        <a href="productions.html">
+                            <li class="menu__item">Productions</li>
+                        </a>
+                        <a href="/about.html">
+                            <li class="menu__item">About</li>
+                        </a>
+                    </ul>
+                </nav>
+                <div class="logo-wrapper">
+                    <a id="logo-container">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 547.09 301.42">
+                            <path class="cls-1"
+                                d="M52.29,161.11c-.99-.99-1.48-2.18-1.48-3.59v-67.71c0-1.28-.49-2.42-1.48-3.41-.99-.99-2.18-1.49-3.58-1.49h-16.35c-1.4,0-2.59-.52-3.58-1.56-.99-1.04-1.48-2.19-1.48-3.46v-9.34c0-1.27.49-2.42,1.48-3.46.99-1.04,2.18-1.56,3.58-1.56h16.35c1.4,0,2.59-.49,3.58-1.48.99-.99,1.48-2.12,1.48-3.4v-9.42c0-1.28.49-2.44,1.48-3.49.99-1.05,2.18-1.57,3.58-1.57h37.84c1.4,0,2.59-.49,3.58-1.48.99-.99,1.48-2.18,1.48-3.58v-9.25c0-1.28.52-2.44,1.57-3.49,1.05-1.05,2.21-1.57,3.49-1.57h51.31c1.28,0,2.44.52,3.49,1.57s1.57,2.21,1.57,3.49v9.25c0,1.4-.52,2.59-1.57,3.58-1.05.99-2.21,1.48-3.49,1.48h-51.31c-1.28,0-2.44.52-3.49,1.57-1.05,1.05-1.57,2.21-1.57,3.49v9.42c0,1.28.52,2.42,1.57,3.4,1.05.99,2.21,1.48,3.49,1.48h28.79c1.28,0,2.41.52,3.4,1.56.99,1.04,1.48,2.19,1.48,3.46v9.34c0,1.27-.5,2.42-1.48,3.46-.99,1.04-2.12,1.56-3.4,1.56h-21c-1.28,0-2.44.5-3.49,1.49-1.05.99-1.57,2.13-1.57,3.41v67.71c0,1.4-.5,2.6-1.48,3.59-.99.99-2.18,1.49-3.58,1.49h-45.64c-1.4,0-2.59-.49-3.58-1.49Z" />
+                            <path class="cls-1"
+                                d="M146.21,161.11c-.99-.99-1.48-2.18-1.48-3.58v-86.91c0-1.28.49-2.44,1.48-3.49.99-1.05,2.18-1.57,3.58-1.57h48.16c1.28,0,2.41.52,3.4,1.56.99,1.04,1.48,2.19,1.48,3.46v9.34c0,1.27-.5,2.42-1.48,3.46-.99,1.04-2.12,1.56-3.4,1.56h-28.79c-1.28,0-2.44.5-3.49,1.49-1.05.99-1.57,2.13-1.57,3.41v67.69c0,1.4-.5,2.6-1.48,3.59-.99.99-2.18,1.49-3.58,1.49h-9.25c-1.4,0-2.59-.49-3.58-1.48Z" />
+                            <path class="cls-1"
+                                d="M226.5,151.25c-1.05-.99-1.57-2.18-1.57-3.58v-9.25c0-1.4-.5-2.59-1.48-3.58-.99-.99-2.18-1.48-3.58-1.48h-9.25c-1.4,0-2.59-.49-3.58-1.49-.99-.99-1.48-2.19-1.48-3.59v-48.31c0-1.28.49-2.42,1.48-3.41.99-.99,2.18-1.49,3.58-1.49h9.25c1.4,0,2.59-.52,3.58-1.56.99-1.04,1.48-2.19,1.48-3.46v-9.34c0-1.27.52-2.42,1.57-3.46,1.05-1.04,2.21-1.56,3.49-1.56h48.17c1.28,0,2.44.52,3.49,1.56,1.05,1.04,1.57,2.19,1.57,3.46v9.34c0,1.27.49,2.42,1.48,3.46.99,1.04,2.12,1.56,3.4,1.56h9.42c1.28,0,2.44.5,3.49,1.49,1.05.99,1.57,2.13,1.57,3.42v28.93c0,1.29-.52,2.45-1.57,3.51-1.05,1.05-2.21,1.58-3.49,1.58h-67.54c-1.28,0-2.44.5-3.49,1.48-1.05.99-1.57,2.18-1.57,3.58v9.25c0,1.4.52,2.59,1.57,3.58,1.05.99,2.21,1.48,3.49,1.48h48.17c1.28,0,2.44.5,3.49,1.48,1.05.99,1.57,2.18,1.57,3.58v9.25c0,1.4-.52,2.59-1.57,3.58-1.05.99-2.21,1.48-3.49,1.48h-48.17c-1.28,0-2.44-.49-3.49-1.48ZM278.15,94.62c1.28,0,2.44-.53,3.49-1.58,1.05-1.06,1.57-2.23,1.57-3.52v-9.51c0-1.29-.52-2.44-1.57-3.43-1.05-1-2.21-1.5-3.49-1.5h-48.17c-1.28,0-2.44.5-3.49,1.5-1.05,1-1.57,2.14-1.57,3.43v9.51c0,1.29.52,2.47,1.57,3.52,1.05,1.06,2.21,1.58,3.49,1.58h48.17Z" />
+                            <path class="cls-1"
+                                d="M327.62,151.34c-1.05-.99-1.57-2.18-1.57-3.58v-9.25c0-1.4-.5-2.59-1.48-3.58-.99-.99-2.18-1.48-3.58-1.48h-9.25c-1.4,0-2.59-.49-3.58-1.49-.99-.99-1.48-2.19-1.48-3.59v-48.31c0-1.28.49-2.42,1.48-3.41.99-.99,2.18-1.49,3.58-1.49h9.25c1.4,0,2.59-.52,3.58-1.56.99-1.04,1.48-2.19,1.48-3.46v-9.34c0-1.27.52-2.42,1.57-3.46,1.05-1.04,2.21-1.56,3.49-1.56h48.17c1.28,0,2.44-.49,3.49-1.48,1.05-.99,1.57-2.12,1.57-3.4v-28.79c0-1.28.49-2.44,1.48-3.49.99-1.05,2.12-1.57,3.4-1.57h9.42c1.28,0,2.44.52,3.49,1.57,1.05,1.05,1.57,2.21,1.57,3.49v125.65c0,1.4-.52,2.59-1.57,3.58-1.05.99-2.21,1.48-3.49,1.48h-67.54c-1.28,0-2.44-.49-3.49-1.48ZM379.28,133.45c1.28,0,2.44-.49,3.49-1.49s1.57-2.19,1.57-3.59v-48.31c0-1.28-.52-2.42-1.57-3.41-1.05-.99-2.21-1.49-3.49-1.49h-48.17c-1.28,0-2.44.5-3.49,1.49-1.05.99-1.57,2.13-1.57,3.41v48.31c0,1.4.52,2.6,1.57,3.59,1.05.99,2.21,1.49,3.49,1.49h48.17Z" />
+                            <path class="cls-1"
+                                d="M430.6,151.34c-1.05-.99-1.57-2.18-1.57-3.58v-9.25c0-1.4-.5-2.59-1.48-3.58-.99-.99-2.18-1.48-3.58-1.48h-9.25c-1.4,0-2.59-.49-3.58-1.49-.99-.99-1.48-2.19-1.48-3.59v-48.31c0-1.28.49-2.42,1.48-3.41.99-.99,2.18-1.49,3.58-1.49l9.25.17c1.4,0,2.59-.52,3.58-1.57.99-1.05,1.48-2.21,1.48-3.49v-9.42c0-1.28.52-2.44,1.57-3.49,1.05-1.05,2.21-1.57,3.49-1.57h48.17c1.28,0,2.44.52,3.49,1.56,1.05,1.04,1.57,2.19,1.57,3.46v9.34c0,1.27.49,2.42,1.48,3.46.99,1.04,2.12,1.56,3.4,1.56h25.49c1.28,0,2.44.5,3.49,1.49,1.05.99,1.57,2.13,1.57,3.41v48.31c0,1.4-.52,2.6-1.57,3.59-1.05.99-2.21,1.49-3.49,1.49h-25.49c-1.28,0-2.42.5-3.4,1.48-.99.99-1.48,2.18-1.48,3.58v9.25c0,1.4-.52,2.59-1.57,3.58-1.05.99-2.21,1.48-3.49,1.48h-48.17c-1.28,0-2.44-.49-3.49-1.48ZM487.38,128.4c1.28,0,2.44-.49,3.49-1.49s1.57-2.19,1.57-3.59v-38.39c0-1.28-.52-2.42-1.57-3.41-1.05-.99-2.21-1.49-3.49-1.49h-53.29c-1.28,0-2.44.5-3.49,1.49-1.05.99-1.57,2.13-1.57,3.41v38.39c0,1.4.52,2.6,1.57,3.59,1.05.99,2.21,1.49,3.49,1.49h53.29Z" />
+                            <path class="cls-1"
+                                d="M40.41,267.65c-.99-.99-1.48-2.18-1.48-3.58v-9.25c0-1.4.49-2.59,1.48-3.58.99-.99,2.18-1.48,3.58-1.48h9.25c1.4,0,2.59.5,3.58,1.48.99.99,1.48,2.18,1.48,3.58v9.25c0,1.4-.5,2.59-1.48,3.58-.99.99-2.18,1.48-3.58,1.48h-9.25c-1.4,0-2.59-.49-3.58-1.48Z" />
+                            <path class="cls-1"
+                                d="M71.18,267.65c-.99-.99-1.48-2.18-1.48-3.58v-86.91c0-1.28.49-2.44,1.48-3.49.99-1.05,2.18-1.57,3.58-1.57h83.61c1.28,0,2.44.52,3.49,1.56,1.05,1.04,1.57,2.19,1.57,3.46v9.34c0,1.27.49,2.42,1.48,3.46.99,1.04,2.12,1.56,3.4,1.56h9.42c1.28,0,2.44.5,3.49,1.49,1.05.99,1.57,2.13,1.57,3.41v67.69c0,1.4-.52,2.6-1.57,3.59-1.05.99-2.21,1.49-3.49,1.49h-9.42c-1.28,0-2.42-.49-3.4-1.49-.99-.99-1.48-2.18-1.48-3.59v-67.69c0-1.28-.52-2.42-1.57-3.41-1.05-.99-2.21-1.49-3.49-1.49h-48.17c-1.28,0-2.44.5-3.49,1.49-1.05.99-1.57,2.13-1.57,3.41v67.69c0,1.4-.5,2.6-1.48,3.59-.99.99-2.18,1.49-3.58,1.49h-25.32c-1.4,0-2.59-.49-3.58-1.48Z" />
+                            <path class="cls-1"
+                                d="M218.93,267.65c-1.05-.99-1.57-2.18-1.57-3.58v-9.25c0-1.4-.5-2.59-1.48-3.58-.99-.99-2.18-1.48-3.58-1.48h-9.25c-1.4,0-2.59-.49-3.58-1.49-.99-.99-1.48-2.19-1.48-3.59v-48.31c0-1.28.49-2.42,1.48-3.41.99-.99,2.18-1.49,3.58-1.49h9.25c1.4,0,2.59-.52,3.58-1.56.99-1.04,1.48-2.19,1.48-3.46v-9.34c0-1.27.52-2.42,1.57-3.46,1.05-1.04,2.21-1.56,3.49-1.56h48.17c1.28,0,2.44.52,3.49,1.56,1.05,1.04,1.57,2.19,1.57,3.46v9.34c0,1.27.49,2.42,1.48,3.46.99,1.04,2.12,1.56,3.4,1.56h9.42c1.28,0,2.44.5,3.49,1.49,1.05.99,1.57,2.13,1.57,3.42v28.93c0,1.29-.52,2.45-1.57,3.51-1.05,1.05-2.21,1.58-3.49,1.58h-67.54c-1.28,0-2.44.5-3.49,1.48-1.05.99-1.57,2.18-1.57,3.58v9.25c0,1.4.52,2.59,1.57,3.58,1.05.99,2.21,1.48,3.49,1.48h48.17c1.28,0,2.44.5,3.49,1.48,1.05.99,1.57,2.18,1.57,3.58v9.25c0,1.4-.52,2.59-1.57,3.58-1.05.99-2.21,1.48-3.49,1.48h-48.17c-1.28,0-2.44-.49-3.49-1.48ZM270.58,211.02c1.28,0,2.44-.53,3.49-1.58,1.05-1.06,1.57-2.23,1.57-3.52v-9.51c0-1.29-.52-2.44-1.57-3.43-1.05-1-2.21-1.5-3.49-1.5h-48.17c-1.28,0-2.44.5-3.49,1.5-1.05,1-1.57,2.14-1.57,3.43v9.51c0,1.29.52,2.47,1.57,3.52,1.05,1.06,2.21,1.58,3.49,1.58h48.17Z" />
+                            <path class="cls-1"
+                                d="M331.14,267.65c-1.05-.99-1.57-2.18-1.57-3.58v-9.25c0-1.4-.5-2.59-1.48-3.58-.99-.99-2.18-1.48-3.58-1.48h-9.25c-1.4,0-2.59-.49-3.58-1.49-.99-.99-1.48-2.19-1.48-3.59v-48.31c0-1.28-.49-2.42-1.48-3.41-.99-.99-2.18-1.49-3.58-1.49h-9.25c-1.4,0-2.59-.52-3.58-1.56-.99-1.04-1.48-2.19-1.48-3.46v-9.34c0-1.27.49-2.42,1.48-3.46.99-1.04,2.18-1.56,3.58-1.56h9.25c1.4,0,2.59-.49,3.58-1.48.99-.99,1.48-2.12,1.48-3.4v-9.42c0-1.28.49-2.44,1.48-3.49.99-1.05,2.18-1.57,3.58-1.57h9.25c1.4,0,2.59.52,3.58,1.57.99,1.05,1.48,2.21,1.48,3.49v9.42c0,1.28.52,2.42,1.57,3.4,1.05.99,2.21,1.48,3.49,1.48h118.49c1.28,0,2.41.52,3.4,1.56.99,1.04,1.48,2.19,1.48,3.46v9.34c0,1.27-.5,2.42-1.48,3.46-.99,1.04-2.12,1.56-3.4,1.56h-118.49c-1.28,0-2.44.5-3.49,1.49-1.05.99-1.57,2.13-1.57,3.41v48.31c0,1.4.52,2.6,1.57,3.59,1.05.99,2.21,1.49,3.49,1.49h118.49c1.28,0,2.41.5,3.4,1.48.99.99,1.48,2.18,1.48,3.58v9.25c0,1.4-.5,2.59-1.48,3.58-.99.99-2.12,1.48-3.4,1.48h-118.49c-1.28,0-2.44-.49-3.49-1.48Z" />
+                        </svg>
+                    </a>
+                    <div class="marquee" lang="en">
+                        <div class="marquee__text">
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
+                            </span>
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
+                            </span>
+                        </div>
+                        <div class="marquee__text" aria-hidden="true">
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
+                            </span>
+                            <span class="marquee__text-string">&nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; &nbsp; &#10039; &nbsp; Visual Artist &nbsp; &#10039;
+                                &nbsp; Video Editor &nbsp; &#10039; &nbsp; Web Dev Enthusiast
                             </span>
                         </div>
                     </div>
@@ -92,8 +166,7 @@
         </div>
     </div>
 
-    <script>
-
+    <script src="/script.js">
     </script>
 </body>
 
