--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
                     hit up my links below &#9787;
                 </p>
                 <ul class="socials__menu">
-                    <li><a href="mailto:fredo25w@gmail.com">email</a></li>
+                    <li><a href="mailto:bizz@fredito.net">email</a></li>
                     <li><a href="https://www.instagram.com/bebofrik/" target="_blank">instagram</a></li>
                     <li><a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank">youtube</a>
                     </li>
@@ -131,7 +131,7 @@
                     hit up my links below &#9787;
                 </p>
                 <ul class="socials__menu">
-                    <li><a href="mailto:fredo25w@gmail.com">email</a></li>
+                    <li><a href="mailto:bizz@fredito.net">email</a></li>
                     <li><a href="https://www.instagram.com/bebofrik/" target="_blank">instagram</a></li>
                     <li><a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank">youtube</a>
                     </li>
