--- a/visualizers.html
+++ b/visualizers.html
@@ -76,10 +76,26 @@
                 <div id="idleMessage" class="idle-message">hover over an image for motion</div>
                 <div class="content__vis-desc">
                     <p>visuals created while exploring digital video mixing techniques using touchdesigner software <br>
-                        &#10047; = exhibited at a gallery ; &#10026; = watch on youtube
+                        &#10047; = exhibited at a gallery ; &#10026; = made for band show ; &#9834; = youtube visualizer series
                     </p>
                 </div>
                 <section class="content__vis--grid">
+
+                    <section class="content__vis--grid__item">
+                        <section class="content__vis--grid__item__img">
+                            <video class="video" preload="auto" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/warping-instru.png">
+                                <source src="assets/videos/warping-instru.mp4" type="video/mp4" />
+                                <source src="assets/videos/webm/warping-instru.webm" type="video/webm" />
+                            </video>
+                        </section>
+
+                        <section class="content__vis--grid__item__info">
+                            <h4 class="content__vis--grid__item__info__title">adrenaline</h4>
+                            <p class="content__vis--grid__item__info__date">&#10026; 2O24</p>
+                        </section>
+                    </section>
+
                     <section class="content__vis--grid__item">
                         <section class="content__vis--grid__item__img">
                             <video class="video" preload="auto" muted playsinline loop
@@ -187,7 +203,7 @@
                             <h4 class="content__vis--grid__item__info__title">
                                 <a href="https://youtu.be/2FxIPGvL-Io" target="_blank" class="link">Wavy Silent Hour</a>
                             </h4>
-                            <p class="content__vis--grid__item__info__date">&#10026; 2O23</p>
+                            <p class="content__vis--grid__item__info__date">2O23</p>
                         </section>
                     </section>
 
@@ -206,7 +222,7 @@
                                     class="link">Frosty
                                     Silent Hour</a>
                             </h4>
-                            <p class="content__vis--grid__item__info__date">&#10026; 2O23</p>
+                            <p class="content__vis--grid__item__info__date">2O23</p>
                         </section>
                     </section>
 
@@ -408,10 +424,26 @@
                 <div id="idleMessage" class="idle-message">hover over an image for motion</div>
                 <div class="content__vis-desc">
                     <p>visuals created while exploring digital video mixing techniques using touchdesigner software <br>
-                        &#10047; = exhibited at a gallery ; &#10026; = watch on youtube
+                        &#10047; = exhibited at a gallery ; &#10026; = made for band show ; &#9834; = youtube visualizer series
                     </p>
                 </div>
+
                 <section class="content__vis--grid">
+                    <section class="content__vis--grid__item">
+                        <section class="content__vis--grid__item__img">
+                            <video class="video" preload="auto" muted playsinline loop
+                                poster="assets/images/video-elemnt-poster/warping-instru.png">
+                                <source src="assets/videos/warping-instru.mp4" type="video/mp4" />
+                                <source src="assets/videos/webm/warping-instru.webm" type="video/webm" />
+                            </video>
+                        </section>
+
+                        <section class="content__vis--grid__item__info">
+                            <h4 class="content__vis--grid__item__info__title">adrenaline</h4>
+                            <p class="content__vis--grid__item__info__date">&#10026; 2O24</p>
+                        </section>
+                    </section>
+
                     <section class="content__vis--grid__item">
                         <section class="content__vis--grid__item__img">
                             <video class="video" preload="auto" muted playsinline loop
