--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </ul>
                 </nav>
                 <div class="logo-wrapper">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 547.09 301.42">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 547.09 301.42" style="padding-bottom: 15px;">
                         <g>
                             <path class="cls-2"
                                 d="M184.73,191.06c-1.27-1.2-1.91-2.65-1.91-4.34v-11.22c0-1.69-.6-3.14-1.8-4.34-1.2-1.2-2.65-1.8-4.34-1.8h-11.22c-1.69,0-3.14-.6-4.34-1.8-1.2-1.2-1.8-2.66-1.8-4.36v-58.62c0-1.56.6-2.94,1.8-4.14,1.2-1.2,2.65-1.81,4.34-1.81h11.22c1.69,0,3.14-.63,4.34-1.89,1.2-1.26,1.8-2.66,1.8-4.2v-11.34c0-1.54.64-2.93,1.91-4.2,1.27-1.26,2.68-1.89,4.24-1.89l17.85,20.19c1.55,0,2.96.63,4.24,1.89,1.27,1.26,1.91,2.66,1.91,4.2v11.34c0,1.54.6,2.94,1.8,4.2,1.2,1.26,2.57,1.89,4.13,1.89h11.43c1.55,0,2.97.61,4.24,1.81,1.27,1.2,1.91,2.59,1.91,4.15v35.1c0,1.56-.64,2.98-1.91,4.26-1.27,1.28-2.68,1.91-4.24,1.91l-41.36-20.19c-1.56,0-2.96.6-4.24,1.8-1.27,1.2-1.91,2.65-1.91,4.34v11.22c0,1.69.64,3.14,1.91,4.34,1.27,1.2,2.68,1.8,4.24,1.8l17.85,20.19c1.55,0,2.96.6,4.24,1.8,1.27,1.2,1.91,2.65,1.91,4.34v11.22c0,1.69-.63,3.14-1.91,4.34-1.27,1.2-2.68,1.8-4.24,1.8l-17.85-20.19c-1.56,0-2.96-.6-4.24-1.8ZM206.82,142.53c1.55,0,2.96-.64,4.24-1.92,1.27-1.28,1.91-2.71,1.91-4.27v-11.54c0-1.57-.63-2.96-1.91-4.17-1.27-1.21-2.68-1.82-4.24-1.82l-17.85-20.19c-1.56,0-2.96.61-4.24,1.82-1.27,1.21-1.91,2.6-1.91,4.17v11.54c0,1.57.64,2.99,1.91,4.27,1.27,1.28,2.68,1.92,4.24,1.92l17.85,20.19Z" />
