no new cursor for now

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body style="overflow: hidden;">
     <div id="for--desktop">
-        <div class="cursor"></div>
+        <!-- <div class="cursor"></div> -->
         <div class="for--desktop__main">
             <div class="bg-container">
                 <video src="assets/videos/bg-video-compressed.mp4" autoplay muted playinline loop
