--- a/scanz.html
+++ b/scanz.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="for--desktop">
-        <div class="cursor"></div>
+        <!-- <div class="cursor"></div> -->
         <div class="for--desktop__main">
 
             <div class="menu-wrapper">
