--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="for--desktop">
-        <div class="cursor small"></div>
+        <!-- <div class="cursor"></div> -->
         <div class="for--desktop__main">
 
             <div class="menu-wrapper">
