--- a/visualizers.html
+++ b/visualizers.html
@@ -94,13 +94,15 @@
 
                     <section class="content__vis--grid__item">
                         <div class="grid-item-video-wrapper">
-                            <section class="content__vis--grid__item__img">
-                                <video class="video" preload="auto" muted playsinline loop
-                                    poster="assets/images/video-elemnt-poster/warping-instru.png">
-                                    <source src="assets/videos/warping-instru.mp4" type="video/mp4" />
-                                    <source src="assets/videos/webm/warping-instru.webm" type="video/webm" />
-                                </video>
-                            </section>
+                            <a href="https://youtu.be/gGTO3FFgS7M?si=S7B7ehfLpoK4KlXn" target="_blank" class="grid-item-link">
+                                <section class="content__vis--grid__item__img">
+                                    <video class="video" preload="auto" muted playsinline loop
+                                        poster="assets/images/video-elemnt-poster/warping-instru.png">
+                                        <source src="assets/videos/warping-instru.mp4" type="video/mp4" />
+                                        <source src="assets/videos/webm/warping-instru.webm" type="video/webm" />
+                                    </video>
+                                </section>
+                            </a>
                         </div>
 
                         <section class="content__vis--grid__item__info">
