--- a/about.html
+++ b/about.html
@@ -90,14 +90,12 @@
                             <iframe width="100%" height="120"
                                 src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Ffr_radio%2Fwarning-from-space-%E5%AE%87%E5%AE%99%E4%BA%BA%E6%9D%B1%E4%BA%AC%E3%81%AB%E7%8F%BE%E3%82%8F%E3%82%8B%2F"
                                 frameborder="0"></iframe>
-                            <iframe width="100%" height="120"
-                                src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Ffr_radio%2Fcat-women-of-the-moon%2F"
-                                frameborder="0"></iframe>
+                                <iframe width="100%" height="120" src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Ffr_radio%2Fcat-women-of-the-moon%2F" frameborder="0" ></iframe>
                             <iframe width="100%" height="120"
                                 src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Ffr_radio%2Finvasion-of-the-neptune-men-%E5%AE%87%E5%AE%99%E5%BF%AB%E9%80%9F%E8%88%B9%2F"
                                 frameborder="0"></iframe>
                             <iframe width="100%" height="120"
-                                src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Ffr_radio%2Fsanto-el-enmascarado-de-plata-vs-la-invasi%C3%B3n-de-los-marcianos%2F"
+                                src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Ffr_radio%2Fsanto-el-enmascarado-de-plata-vs-la-invasi%C3%B3n-de-los-marcianos%2F"
                                 frameborder="0"></iframe>
                             <iframe width="100%" height="120"
                                 src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2Ffr_radio%2Fbarbarella%2F"
