--- a/productions.html
+++ b/productions.html
@@ -128,12 +128,12 @@
                         <span></span>
                     </label>
                     <ul class="menu-list--mobile">
-                        <li class="menu__item"><a href="index.html">Home</a></li>
-                        <li class="menu__item"><a href="visualizers.html">Visualizrs</a></li>
-                        <li class="menu__item"><a href="scanz.html">Scanz</a></li>
+                        <li class="menu__item white-bg"><a href="index.html">Home</a></li>
+                        <li class="menu__item white-bg"><a href="visualizers.html">Visualizrs</a></li>
+                        <li class="menu__item white-bg"><a href="scanz.html">Scanz</a></li>
                         <li class="menu__item active-page"><a href="productions.html">Productions</a></li>
-                        <li class="menu__item"><a href="/about.html">About</a></li>
-                        <li class="menu__item"><a href="contact.html">Say Hi</a></li>
+                        <li class="menu__item white-bg"><a href="/about.html">About</a></li>
+                        <li class="menu__item white-bg"><a href="contact.html">Say Hi</a></li>
                     </ul>
                 </nav>
                 <div class="logo-wrapper">
