--- a/scanz.html
+++ b/scanz.html
@@ -51,7 +51,7 @@
 
             <div class="content__prod-wrap">
                 <div class="content__prod-desc">
-                    <p>ongoing physical smear project (2023-present)</p>
+                    <p>ongoing photo project where I smear pictures on a scanner (2023-present)</p>
                 </div>
                 <div class="scan-smears">
                     <img src="assets/images/scanned-imgs/scans__2023/flower-1.jpg" alt="">
@@ -90,12 +90,12 @@
                         <span></span>
                     </label>
                     <ul class="menu-list--mobile">
-                        <li class="menu__item"><a href="index.html">Home</a></li>
-                        <li class="menu__item"><a href="visualizers.html">Visualizrs</a></li>
+                        <li class="menu__item white-bg"><a href="index.html">Home</a></li>
+                        <li class="menu__item white-bg"><a href="visualizers.html">Visualizrs</a></li>
                         <li class="menu__item active-page"><a href="scanz.html">Scanz</a></li>
-                        <li class="menu__item"><a href="productions.html">Productions</a></li>
-                        <li class="menu__item"><a href="/about.html">About</a></li>
-                        <li class="menu__item"><a href="contact.html">Say Hi</a></li>
+                        <li class="menu__item white-bg"><a href="productions.html">Productions</a></li>
+                        <li class="menu__item white-bg"><a href="/about.html">About</a></li>
+                        <li class="menu__item white-bg"><a href="contact.html">Say Hi</a></li>
                     </ul>
                 </nav>
                 <div class="logo-wrapper">
@@ -121,7 +121,7 @@
 
             <div class="content__prod-wrap">
                 <div class="content__prod-desc">
-                    <p>ongoing physical smear project (2023-present)</p>
+                    <p>ongoing photo project where I smear pictures on a scanner (2023-present)</p>
                 </div>
                 <div class="scan-smears">
                     <img src="assets/images/scanned-imgs/scans__2023/flower-1.jpg" alt="">
