--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,11 @@
             <div class="menu-wrapper">
                 <nav class="menu--desktop">
                     <ul class="menu-list">
-                        <li class="menu__item"><a href="index.html">Home</a></li>
-                        <li class="menu__item"><a href="visualizers.html">Visualizrs</a></li>
-                        <li class="menu__item"><a href="scanz.html">Scanz</a></li>
-                        <li class="menu__item"><a href="productions.html">Productions</a></li>
-                        <li class="menu__item"><a href="/about.html">About</a></li>
+                        <li class="menu__item white-bg"><a href="index.html">Home</a></li>
+                        <li class="menu__item white-bg"><a href="visualizers.html">Visualizrs</a></li>
+                        <li class="menu__item white-bg"><a href="scanz.html">Scanz</a></li>
+                        <li class="menu__item white-bg"><a href="productions.html">Productions</a></li>
+                        <li class="menu__item white-bg"><a href="/about.html">About</a></li>
                         <li class="menu__item active-page"><a href="contact.html">Say Hi</a></li>
                     </ul>
                 </nav>
