--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
     <div id="for--mobile">
         <div class="for--mobile__main">
             <div class="bg-container">
-                <video class="bg-video-rotate" src="assets/videos/bg-video-compressed.mp4" autoplay muted playinline
-                    loop disablepictureinpicture></video>
+                <video src="assets/videos/bg-video-compressed.mp4" autoplay muted playinline loop disablepictureinpicture></video>
             </div>
             <div class="menu-wrapper">
                 <nav class="menu--mobile">
