--- a/scanz.html
+++ b/scanz.html
@@ -51,7 +51,7 @@
 
             <div class="content__prod-wrap">
                 <div class="content__prod-desc">
-                    <p>ongoing photo project where I smear pictures on a scanner (2023-present)</p>
+                    <p>ongoing photo project: smeared pictures on a scanner (2023-present)</p>
                 </div>
                 <div class="scan-smears">
                     <img src="assets/images/scanned-imgs/scans__2023/flower-1.jpg" alt="">
@@ -68,6 +68,8 @@
                     <img src="assets/images/scanned-imgs/scans__202407/Scan53.jpeg" alt="">
                     <img src="assets/images/scanned-imgs/scans__202407/Scan24.jpeg" alt="">
                     <img src="assets/images/scanned-imgs/scans__202407/Scan26.jpeg" alt="">
+                    <img src="assets/images/scanned-imgs/scans__202407/Scan3.jpeg" alt="">
+                    <img src="assets/images/scanned-imgs/scans__202407/Scan41.jpeg" alt="">
                 </div>
             </div>
 
@@ -121,7 +123,7 @@
 
             <div class="content__prod-wrap">
                 <div class="content__prod-desc">
-                    <p>ongoing photo project where I smear pictures on a scanner (2023-present)</p>
+                    <p>ongoing photo project: smeared pictures on a scanner (2023-present)</p>
                 </div>
                 <div class="scan-smears">
                     <img src="assets/images/scanned-imgs/scans__2023/flower-1.jpg" alt="">
@@ -138,6 +140,8 @@
                     <img src="assets/images/scanned-imgs/scans__202407/Scan53.jpeg" alt="">
                     <img src="assets/images/scanned-imgs/scans__202407/Scan24.jpeg" alt="">
                     <img src="assets/images/scanned-imgs/scans__202407/Scan26.jpeg" alt="">
+                    <img src="assets/images/scanned-imgs/scans__202407/Scan3.jpeg" alt="">
+                    <img src="assets/images/scanned-imgs/scans__202407/Scan41.jpeg" alt="">
                 </div>
             </div>
 
