--- a/visualizers.html
+++ b/visualizers.html
@@ -61,7 +61,7 @@
                         <p>Exploring digital video mixing techniques using TouchDesigner software.
                             <br>
                             <br>
-                            <a href="https://youtube.com/playlist?list=PL_kHstLLSx3Zn5hVkHS9lb_4WCUh5V23x&si=wX5PvP5TB8_GU8Pq"
+                            &#x1F4FC; <a href="https://youtube.com/playlist?list=PL_kHstLLSx3Zn5hVkHS9lb_4WCUh5V23x&si=wX5PvP5TB8_GU8Pq"
                                 target="_blank">Fredito visuals series
                                 playlist on YouTube</a>
                         </p>
@@ -70,6 +70,27 @@
                     </div>
                 </div>
                 <section class="content__vis--grid">
+
+                    <section class="content__vis--grid__item">
+                        <div class="grid-item-video-wrapper">
+                            <a href="https://youtu.be/VR8iT3Asu8w?si=9sFIY30WMtH5lzm5" target="_blank"
+                                class="grid-item-link">
+                                <section class="content__vis--grid__item__img">
+                                    <video class="video" preload="auto" muted playsinline loop
+                                        poster="assets/images/video-elemnt-poster/roadtrip.png">
+                                        <source src="assets/videos/roadtrip.mp4" type="video/mp4" />
+                                        <source src="assets/videos/webm/roadtrip.webm" type="video/webm" />
+                                    </video>
+                                </section>
+                            </a>
+                        </div>
+
+                        <section class="content__vis--grid__item__info">
+                            <h4 class="content__vis--grid__item__info__title">roadtrip
+                            </h4>
+                            <p class="content__vis--grid__item__info__date">2O24</p>
+                        </section>
+                    </section>
 
                     <section class="content__vis--grid__item">
                         <div class="grid-item-video-wrapper">
@@ -456,6 +477,28 @@
                 </div>
 
                 <section class="content__vis--grid">
+
+                    <section class="content__vis--grid__item">
+                        <div class="grid-item-video-wrapper">
+                            <a href="https://youtu.be/VR8iT3Asu8w?si=9sFIY30WMtH5lzm5" target="_blank"
+                                class="grid-item-link">
+                                <section class="content__vis--grid__item__img">
+                                    <video class="video" preload="auto" muted playsinline loop
+                                        poster="assets/images/video-elemnt-poster/roadtrip.png">
+                                        <source src="assets/videos/roadtrip.mp4" type="video/mp4" />
+                                        <source src="assets/videos/webm/roadtrip.webm" type="video/webm" />
+                                    </video>
+                                </section>
+                            </a>
+                        </div>
+
+                        <section class="content__vis--grid__item__info">
+                            <h4 class="content__vis--grid__item__info__title">roadtrip
+                            </h4>
+                            <p class="content__vis--grid__item__info__date">2O24</p>
+                        </section>
+                    </section>
+                    
                     <section class="content__vis--grid__item">
                         <section class="content__vis--grid__item__img">
                             <video class="video" preload="auto" muted playsinline loop
