--- a/visualizers.html
+++ b/visualizers.html
@@ -466,7 +466,7 @@
                         <p>Exploring digital video mixing techniques using TouchDesigner software.
                             <br>
                             <br>
-                            <a href="https://youtube.com/playlist?list=PL_kHstLLSx3Zn5hVkHS9lb_4WCUh5V23x&si=wX5PvP5TB8_GU8Pq"
+                            &#x1F4FC; <a href="https://youtube.com/playlist?list=PL_kHstLLSx3Zn5hVkHS9lb_4WCUh5V23x&si=wX5PvP5TB8_GU8Pq"
                                 target="_blank">Fredito visuals series
                                 playlist on YouTube</a>
 
